[gd_scene load_steps=6 format=2]

[ext_resource path="res://Entita/player/playermesh.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entita/player/player.gd" type="Script" id=2]
[ext_resource path="res://Entita/player/UI/CombatUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scene Principali/UIcoins_item.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.43515
height = 1.30255

[node name="player" type="KinematicBody"]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.00695729, 0.10265 )
shape = SubResource( 1 )

[node name="target" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.89013, -5.56085 )

[node name="Camera" type="Camera" parent="target"]
transform = Transform( -1, 1.7053e-13, 3.25841e-07, 2.52789e-07, 0.630974, 0.775804, -2.05597e-07, 0.775804, -0.630974, 0, 2.34482, -1.82394 )
far = 300.0

[node name="UI" type="Control" parent="target/Camera"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -2.0
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CombatUI" parent="target/Camera/UI" instance=ExtResource( 3 )]

[node name="UIcoins_item" parent="target/Camera/UI" instance=ExtResource( 4 )]

[node name="rotable" type="Spatial" parent="."]

[node name="mesh" parent="rotable" instance=ExtResource( 1 )]

[node name="spawnAtk" type="Position3D" parent="rotable"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.195005, 0.849614 )

[node name="Timer" type="Node" parent="."]

[node name="scatto" type="Timer" parent="Timer"]
wait_time = 1.5
one_shot = true
[connection signal="timeout" from="Timer/scatto" to="." method="_on_scatto_timeout"]
